--- a/TalkItOut/tio-app/src/components/header.css
+++ b/TalkItOut/tio-app/src/components/header.css
@@ -3,10 +3,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 100%;
+  width: 98%;
   padding: 10px 20px;
   background-color: #f5f5f5;
   border-bottom: 1px solid #ddd;
+  position: fixed;
+  top: 0;
 }
 
 .header-text {
@@ -62,7 +64,6 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   background-color: #e0e0e0;
   padding: 10px 20px;
