--- a/TalkItOut/tio-app/src/components/calendar-week.css
+++ b/TalkItOut/tio-app/src/components/calendar-week.css
@@ -53,7 +53,7 @@ body,
   .rbc-event {
     background-color: #b3c8d9;
     border: 1px solid #90a0ac;
-    color: white;
+    color: #333;
     border-radius: 5px;
     padding: 5px;
     margin: 3px 0;
@@ -61,7 +61,7 @@ body,
 
   .rbc-event-content {
     font-size: 0.85rem;
-    color: white;
+    color: #333;
   }
 
   .rbc-time-view {
